--- a/portfolio-3/src/App.css
+++ b/portfolio-3/src/App.css
@@ -1,38 +1,21 @@
-.App {
+body {
+  background-color: whitesmoke;
+}
+a {
+  color: aqua;
+}
+/* .sky-box {
+} */
+.name-poe {
   text-align: center;
+  color: aliceblue;
+  opacity: 1;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name-poe-backing {
+  background-color: #23395d;
+  opacity: 0.95;
+  width: 45%;
+  margin-left: 30%;
+  position: absolute;
+  margin-top: 18%;
 }
