--- a/portfolio-3/src/App.css
+++ b/portfolio-3/src/App.css
@@ -24,6 +24,26 @@ a {
   margin-top: 54.75%;
   width: 100%;
 }
+.tabs .tab a {
+  color: blue;
+} /*Black color to the text*/
+
+.tabs .tab a:hover {
+  background-color: #eee;
+  color: lightskyblue;
+} /*Text color on hover*/
+
+.tabs .tab a.active {
+  background-color: #eee;
+  color: blue;
+} /*Background and text color when a tab is active*/
+
+.tabs .indicator {
+  background-color: blue;
+} /*Color of underline*/
 /* #about-me{} */
 /* #portfolio{} */
 /* #contact-me{} */
+.sides {
+  background-color: grey;
+}
