--- a/portfolio-3/src/App.css
+++ b/portfolio-3/src/App.css
@@ -48,7 +48,7 @@ a {
   background-color: grey;
 }
 .headshot {
-  height: 40%;
+  height: 60%;
   width: 20%;
   display: block;
   margin-left: auto;
@@ -77,5 +77,15 @@ a {
 }
 
 .footer-icon {
-  width: 25%;
+  width: 33%;
+}
+.codewars {
+  margin-top: 10%;
+  width: 12%;
+}
+.github-footer {
+  width: 38%;
+}
+#footer {
+  background-color: #23395d;
 }
