--- a/portfolio-3/src/App.css
+++ b/portfolio-3/src/App.css
@@ -48,16 +48,20 @@ a {
   background-color: grey;
 }
 .headshot {
-  height: 60%;
-  width: 20%;
+  width: 40%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin-top: 8%;
+  margin-bottom: 8%;
 }
 .about-content {
   background-color: white;
+  border-style: solid;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+  border-top-color: grey;
 }
 .row {
   background-color: whitesmoke;
