--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ a {
 
 .sky-box {
   width: 100%;
+  height: 60%;
 }
 .name-poe {
   font-size: 4vw;
@@ -24,7 +25,7 @@ a {
 
 .tab-management {
   position: relative;
-  margin-top: 17%;
+  margin-top: 20%;
   width: 100%;
 }
 .tabs .tab a {
